# pgapp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: VENDORED_LICENSES.md  app.css  app.js  codemirror-show-hint.min.css  codemirror-sql-hint.min.js
chart-libs/canvas-bars/: chart.js
db/: control_schema.sql  schema.sql
docs/: README.md  actions.md  app-builder.md  architecture.md  authentication.md  charts.md  components.md  forms.md  getting-started.md  markup.md  migration-from-apex.md  reports.md  roadmap.md  secrets.md  themes.md
examples/: app_builder.pgapp  helpdesk.pgapp  helpdesk_functions.sql  helpdesk_seed.sql  showcase.pgapp  showcase_functions.sql  showcase_seed.sql  todo.app  todo.pgapp  venpay.pgapp
examples/helpdesk-modular/: agents.pgapp  app.pgapp  tickets.pgapp
examples/nexus-erp/: app.pgapp  bigseed.sql  seed.sql
icons/fontawesome/: pack.json
icons/material/: pack.json
marketing/: PUBLISHED.md  index.html  style.css
marketing/tutorial/: actions.html  auth.html  charts.html  editable-tables.html  forms.html  modular-apps.html  queries.html  query-entities.html  reports.html  search-and-views.html  theming.html
src/: actions.rs  app_editor.rs  chart_lib.rs  control.rs  dateutil.rs  html.rs  icons.rs  instance.rs  item_types.rs  lib.rs  main.rs  markup.rs  meta.rs  model.rs  page_reorder.rs  render.rs  runtime.js  scaffold.rs  secrets.rs  server.rs  source.rs  theme.rs
src/actions/: call_function.rs  clear_session_state.rs  create_app.rs  create_workspace.rs  http_request.rs  log_values.rs  run_query.rs  (+2 more)
(+67 files in other folders)
