[package]
name = "pgapp"
version = "0.1.0"
edition = "2021"
# `cargo-pgapp` (src/bin/cargo-pgapp.rs) is a second, small binary so
# `cargo pgapp ...` works as a subcommand — but `cargo run -- <path>`
# should still mean "run the server", not force everyone to type
# `--bin pgapp` from now on.
default-run = "pgapp"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
tower-http = { version = "0.7.0", features = ["normalize-path"] }
